name:                servant-esqueleto-sample
version:             0.1.0.0
synopsis:            Reference for Web API code with servant + esqueleto
description:         Please see README.md
homepage:            https://github.com/cyclone-t/servant-esqueleto-sample
license:             BSD3
license-file:        LICENSE
author:              CycloneT
maintainer:          31123989+cyclone-t@users.noreply.github.com
copyright:           2017 CycloneT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webapi0
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       ApiTypes, DBSetting, Model, Types, Utils, Handler1
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cases
                     , containers
                     , data-default
                     , esqueleto
                     , fast-logger
                     , hsyslog
                     , monad-logger
                     , monad-logger-syslog
                     , mtl
                     , mysql
                     , optparse-applicative
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , resourcet
                     , safe-exceptions
                     , semigroups
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , wai-extra
                     , wai-logger
                     , warp
